@@ -67,6 +67,21 @@ define('SCRAPE_IRC_CATEGORY_IGNORE', '');
 define('SCRAPE_IRC_TITLE_IGNORE', '');
 
 /***********************************************************************************************************************
+ * This is a list of all the channels we fetch PRE's from.
+ * If you want to ignore a source, change it from false to true.
+ **********************************************************************************************************************/
+define('SCRAPE_IRC_CHANNELS',
+	serialize(
+		array(
+			//'#Channel'                => 'Password',
+			//'#nZEDbPRE2'                => null,
+			'#PreNNTmux'                => null,
+			'#nZEDbPRE'                 => null
+		)
+	)
+);
+
+/***********************************************************************************************************************
  * This is a list of all the sources we fetch PRE's from.
  * If you want to ignore a source, change it from false to true.
  **********************************************************************************************************************/
